crates/skyla-invoicing/tests/snapshots/isdoc__credit_note.snap
---
source: crates/skyla-invoicing/tests/isdoc.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<Invoice xmlns="http://isdoc.cz/namespace/2013" version="6.0.2">
  <DocumentType>2</DocumentType>
  <ID>OD260001</ID>
  <UUID>00000000-0000-0000-0000-000000000001</UUID>
  <IssuingSystem>sky-la</IssuingSystem>
  <IssueDate>2026-09-20</IssueDate>
  <TaxPointDate>2026-09-20</TaxPointDate>
  <VATApplicable>true</VATApplicable>
  <ElectronicPossibilityAgreementReference/>
  <Note>Workshop zrušen</Note>
  <LocalCurrencyCode>CZK</LocalCurrencyCode>
  <CurrRate>1</CurrRate>
  <RefCurrRate>1</RefCurrRate>
  <AccountingSupplierParty>
    <Party>
      <PartyIdentification>
        <ID>25596641</ID>
      </PartyIdentification>
      <PartyName>
        <Name>Jana Nováková</Name>
      </PartyName>
      <PostalAddress>
        <StreetName>Korunní</StreetName>
        <BuildingNumber>2569/108</BuildingNumber>
        <CityName>Praha 10</CityName>
        <PostalZone>10100</PostalZone>
        <Country>
          <IdentificationCode>CZ</IdentificationCode>
          <Name>Česká republika</Name>
        </Country>
      </PostalAddress>
      <PartyTaxScheme>
        <CompanyID>CZ25596641</CompanyID>
        <TaxScheme>VAT</TaxScheme>
      </PartyTaxScheme>
      <Contact>
        <ElectronicMail>jana@example.cz</ElectronicMail>
      </Contact>
    </Party>
  </AccountingSupplierParty>
  <AccountingCustomerParty>
    <Party>
      <PartyIdentification>
        <ID>27082440</ID>
      </PartyIdentification>
      <PartyName>
        <Name>Studio Brno s.r.o.</Name>
      </PartyName>
      <PostalAddress>
        <StreetName>Masarykova</StreetName>
        <BuildingNumber>12</BuildingNumber>
        <CityName>Brno</CityName>
        <PostalZone>60200</PostalZone>
        <Country>
          <IdentificationCode>CZ</IdentificationCode>
          <Name>Česká republika</Name>
        </Country>
      </PostalAddress>
      <PartyTaxScheme>
        <CompanyID>CZ27082440</CompanyID>
        <TaxScheme>VAT</TaxScheme>
      </PartyTaxScheme>
    </Party>
  </AccountingCustomerParty>
  <OriginalDocumentReferences>
    <OriginalDocumentReference id="original">
      <ID>2026-001</ID>
      <IssueDate>2026-09-10</IssueDate>
      <UUID>00000000-0000-0000-0000-000000000002</UUID>
    </OriginalDocumentReference>
  </OriginalDocumentReferences>
  <InvoiceLines>
    <InvoiceLine>
      <ID>1</ID>
      <OriginalDocumentReference ref="original">
      </OriginalDocumentReference>
      <InvoicedQuantity unitCode="H87">-1</InvoicedQuantity>
      <LineExtensionAmount>-12000.00</LineExtensionAmount>
      <LineExtensionAmountTaxInclusive>-14520.00</LineExtensionAmountTaxInclusive>
      <LineExtensionTaxAmount>-2520.00</LineExtensionTaxAmount>
      <UnitPrice>12000.00</UnitPrice>
      <UnitPriceTaxInclusive>14520.00</UnitPriceTaxInclusive>
      <ClassifiedTaxCategory>
        <Percent>21</Percent>
        <VATCalculationMethod>0</VATCalculationMethod>
        <VATApplicable>true</VATApplicable>
      </ClassifiedTaxCategory>
      <Item>
        <Description>Workshop</Description>
      </Item>
    </InvoiceLine>
  </InvoiceLines>
  <TaxTotal>
    <TaxSubTotal>
      <TaxableAmount>-12000.00</TaxableAmount>
      <TaxAmount>-2520.00</TaxAmount>
      <TaxInclusiveAmount>-14520.00</TaxInclusiveAmount>
      <AlreadyClaimedTaxableAmount>0.00</AlreadyClaimedTaxableAmount>
      <AlreadyClaimedTaxAmount>0.00</AlreadyClaimedTaxAmount>
      <AlreadyClaimedTaxInclusiveAmount>0.00</AlreadyClaimedTaxInclusiveAmount>
      <DifferenceTaxableAmount>-12000.00</DifferenceTaxableAmount>
      <DifferenceTaxAmount>-2520.00</DifferenceTaxAmount>
      <DifferenceTaxInclusiveAmount>-14520.00</DifferenceTaxInclusiveAmount>
      <TaxCategory>
        <Percent>21</Percent>
        <VATApplicable>true</VATApplicable>
      </TaxCategory>
    </TaxSubTotal>
    <TaxAmount>-2520.00</TaxAmount>
  </TaxTotal>
  <LegalMonetaryTotal>
    <TaxExclusiveAmount>-12000.00</TaxExclusiveAmount>
    <TaxInclusiveAmount>-14520.00</TaxInclusiveAmount>
    <AlreadyClaimedTaxExclusiveAmount>0.00</AlreadyClaimedTaxExclusiveAmount>
    <AlreadyClaimedTaxInclusiveAmount>0.00</AlreadyClaimedTaxInclusiveAmount>
    <DifferenceTaxExclusiveAmount>-12000.00</DifferenceTaxExclusiveAmount>
    <DifferenceTaxInclusiveAmount>-14520.00</DifferenceTaxInclusiveAmount>
    <PaidDepositsAmount>0.00</PaidDepositsAmount>
    <PayableAmount>-14520.00</PayableAmount>
  </LegalMonetaryTotal>
</Invoice>
