crates/skyla-invoicing/tests/snapshots/isdoc__final_invoice.snap
---
source: crates/skyla-invoicing/tests/isdoc.rs
expression: f
---
<?xml version="1.0" encoding="UTF-8"?>
<Invoice xmlns="http://isdoc.cz/namespace/2013" version="6.0.2">
  <DocumentType>1</DocumentType>
  <ID>2026-001</ID>
  <UUID>00000000-0000-0000-0000-000000000001</UUID>
  <IssuingSystem>sky-la</IssuingSystem>
  <IssueDate>2026-09-15</IssueDate>
  <TaxPointDate>2026-09-15</TaxPointDate>
  <VATApplicable>true</VATApplicable>
  <ElectronicPossibilityAgreementReference/>
  <Note>Děkuji za spolupráci &amp; těším se na další &lt;projekt&gt;.</Note>
  <LocalCurrencyCode>CZK</LocalCurrencyCode>
  <CurrRate>1</CurrRate>
  <RefCurrRate>1</RefCurrRate>
  <AccountingSupplierParty>
    <Party>
      <PartyIdentification>
        <ID>25596641</ID>
      </PartyIdentification>
      <PartyName>
        <Name>Jana Nováková</Name>
      </PartyName>
      <PostalAddress>
        <StreetName>Korunní</StreetName>
        <BuildingNumber>2569/108</BuildingNumber>
        <CityName>Praha 10</CityName>
        <PostalZone>10100</PostalZone>
        <Country>
          <IdentificationCode>CZ</IdentificationCode>
          <Name>Česká republika</Name>
        </Country>
      </PostalAddress>
      <PartyTaxScheme>
        <CompanyID>CZ25596641</CompanyID>
        <TaxScheme>VAT</TaxScheme>
      </PartyTaxScheme>
      <Contact>
        <ElectronicMail>jana@example.cz</ElectronicMail>
      </Contact>
    </Party>
  </AccountingSupplierParty>
  <AccountingCustomerParty>
    <Party>
      <PartyIdentification>
        <ID>27082440</ID>
      </PartyIdentification>
      <PartyName>
        <Name>Studio Brno s.r.o.</Name>
      </PartyName>
      <PostalAddress>
        <StreetName>Masarykova</StreetName>
        <BuildingNumber>12</BuildingNumber>
        <CityName>Brno</CityName>
        <PostalZone>60200</PostalZone>
        <Country>
          <IdentificationCode>CZ</IdentificationCode>
          <Name>Česká republika</Name>
        </Country>
      </PostalAddress>
      <PartyTaxScheme>
        <CompanyID>CZ27082440</CompanyID>
        <TaxScheme>VAT</TaxScheme>
      </PartyTaxScheme>
    </Party>
  </AccountingCustomerParty>
  <InvoiceLines>
    <InvoiceLine>
      <ID>1</ID>
      <InvoicedQuantity>1</InvoicedQuantity>
      <LineExtensionAmount>150000.00</LineExtensionAmount>
      <LineExtensionAmountTaxInclusive>181500.00</LineExtensionAmountTaxInclusive>
      <LineExtensionTaxAmount>31500.00</LineExtensionTaxAmount>
      <UnitPrice>150000.00</UnitPrice>
      <UnitPriceTaxInclusive>181500.00</UnitPriceTaxInclusive>
      <ClassifiedTaxCategory>
        <Percent>21</Percent>
        <VATCalculationMethod>0</VATCalculationMethod>
        <VATApplicable>true</VATApplicable>
      </ClassifiedTaxCategory>
      <Item>
        <Description>Web</Description>
      </Item>
    </InvoiceLine>
  </InvoiceLines>
  <TaxedDeposits>
    <TaxedDeposit>
      <ID>DZ2026-01</ID>
      <VariableSymbol>202601</VariableSymbol>
      <TaxableDepositAmount>100000.00</TaxableDepositAmount>
      <TaxInclusiveDepositAmount>121000.00</TaxInclusiveDepositAmount>
      <ClassifiedTaxCategory>
        <Percent>21</Percent>
        <VATCalculationMethod>0</VATCalculationMethod>
        <VATApplicable>true</VATApplicable>
      </ClassifiedTaxCategory>
    </TaxedDeposit>
  </TaxedDeposits>
  <TaxTotal>
    <TaxSubTotal>
      <TaxableAmount>150000.00</TaxableAmount>
      <TaxAmount>31500.00</TaxAmount>
      <TaxInclusiveAmount>181500.00</TaxInclusiveAmount>
      <AlreadyClaimedTaxableAmount>100000.00</AlreadyClaimedTaxableAmount>
      <AlreadyClaimedTaxAmount>21000.00</AlreadyClaimedTaxAmount>
      <AlreadyClaimedTaxInclusiveAmount>121000.00</AlreadyClaimedTaxInclusiveAmount>
      <DifferenceTaxableAmount>50000.00</DifferenceTaxableAmount>
      <DifferenceTaxAmount>10500.00</DifferenceTaxAmount>
      <DifferenceTaxInclusiveAmount>60500.00</DifferenceTaxInclusiveAmount>
      <TaxCategory>
        <Percent>21</Percent>
        <VATApplicable>true</VATApplicable>
      </TaxCategory>
    </TaxSubTotal>
    <TaxAmount>31500.00</TaxAmount>
  </TaxTotal>
  <LegalMonetaryTotal>
    <TaxExclusiveAmount>150000.00</TaxExclusiveAmount>
    <TaxInclusiveAmount>181500.00</TaxInclusiveAmount>
    <AlreadyClaimedTaxExclusiveAmount>100000.00</AlreadyClaimedTaxExclusiveAmount>
    <AlreadyClaimedTaxInclusiveAmount>121000.00</AlreadyClaimedTaxInclusiveAmount>
    <DifferenceTaxExclusiveAmount>50000.00</DifferenceTaxExclusiveAmount>
    <DifferenceTaxInclusiveAmount>60500.00</DifferenceTaxInclusiveAmount>
    <PaidDepositsAmount>0.00</PaidDepositsAmount>
    <PayableAmount>60500.00</PayableAmount>
  </LegalMonetaryTotal>
  <PaymentMeans>
    <Payment>
      <PaidAmount>60500.00</PaidAmount>
      <PaymentMeansCode>42</PaymentMeansCode>
      <Details>
        <PaymentDueDate>2026-09-30</PaymentDueDate>
        <ID>19-2000145399</ID>
        <BankCode>0800</BankCode>
        <Name/>
        <IBAN>CZ6508000000192000145399</IBAN>
        <BIC>GIBACZPX</BIC>
        <VariableSymbol>2026001</VariableSymbol>
      </Details>
    </Payment>
  </PaymentMeans>
</Invoice>
